--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: MapleMesh.org
 email: admin@maplemesh.org
+repository: maplemesh/maplemesh.org
 description: >- # this means to ignore newlines until "baseurl:"
   MapleMesh is a community organization working to build and maintain a local, resilient communications infrastructure based on LoRa mesh radios in Maple Valley and the surrounding communities.
 baseurl: "/" # the subpath of your site, e.g. /blog
