--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,6 +2,9 @@ navbar_entries:
   - title: Get Started
     url: GetStarted
 
+  - title: Coverage
+    url: Coverage
+
   - title: blog
     url: blog
 
