--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ title: MapleMesh.org
 email: admin@maplemesh.org
 repository: maplemesh/maplemesh.org
 description: >- # this means to ignore newlines until "baseurl:"
-  baseurl: "/" # the subpath of your site, e.g. /blog
+Welcome to MapleMesh.org
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://www.maplemesh.org" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: lolnobodyusestwitteranymore
 github_username:  maplemesh
