--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,9 +10,6 @@ navbar_entries:
     
   - title: Real-Time Mesh Info
     url: https://meshinfo.rainlab.io/map.html
-  
-  - title: Contact
-    url: Contact
     
   - title: blog
     url: blog
@@ -74,6 +71,9 @@ footer_entries:
 
   - title: PugetMesh
     url: https://pugetmesh.org
+
+  - title: Contact Us
+    url: Contact
 
 misc_entries:
   - title: this is an example vertical list
