--- a/_data/home.yml
+++ b/_data/home.yml
@@ -64,7 +64,7 @@ old_project_entries:
 
 footer_entries:
   - title: Join Our Discord
-    url: https://discord.gg/maplemesh
+    url: https://discord.gg/dNZ9Fpm9Yr
 
   - title: Meshtastic
     url: https://meshtastic.org
